tests/invalid_nodepend/combined_ho_type_inst_1.err_exp
combined_ho_type_inst_1.m:015: Error: the type
combined_ho_type_inst_1.m:015:   [38;5;87m`(pred((int :: in), (int :: out)) is det)'[39;49m
combined_ho_type_inst_1.m:015:   contains higher order inst information, but
combined_ho_type_inst_1.m:015:   this is [38;5;203mnot allowed[39;49m in the definition of an
combined_ho_type_inst_1.m:015:   equivalence type.
combined_ho_type_inst_1.m:016: Error: the type
combined_ho_type_inst_1.m:016:   [38;5;87m`(((func (int :: in)) = (int :: out)) is semidet)'[39;49m
combined_ho_type_inst_1.m:016:   contains higher order inst information, but
combined_ho_type_inst_1.m:016:   this is [38;5;203mnot allowed[39;49m in the definition of an
combined_ho_type_inst_1.m:016:   equivalence type.
combined_ho_type_inst_1.m:019: In type definition: error: the type
combined_ho_type_inst_1.m:019:   [38;5;87m`(pred((int :: in), (int :: out)) is det)'[39;49m
combined_ho_type_inst_1.m:019:   contains higher order inst information, but
combined_ho_type_inst_1.m:019:   this is [38;5;203mnot (yet) allowed[39;49m in a type
combined_ho_type_inst_1.m:019:   constructor's argument.
combined_ho_type_inst_1.m:021: In type definition: error: the type
combined_ho_type_inst_1.m:021:   [38;5;87m`(((func (int :: in)) = (int :: out)) is semidet)'[39;49m
combined_ho_type_inst_1.m:021:   contains higher order inst information, but
combined_ho_type_inst_1.m:021:   this is [38;5;203mnot (yet) allowed[39;49m in a type
combined_ho_type_inst_1.m:021:   constructor's argument.
combined_ho_type_inst_1.m:024: In type definition: in the first argument of
combined_ho_type_inst_1.m:024:   higher-order predicate type:
combined_ho_type_inst_1.m:024:   error: the type
combined_ho_type_inst_1.m:024:   [38;5;87m`(pred((int :: in), (int :: out)) is det)'[39;49m
combined_ho_type_inst_1.m:024:   contains higher order inst information, but
combined_ho_type_inst_1.m:024:   this is [38;5;203mnot allowed[39;49m in a predicate's argument.
combined_ho_type_inst_1.m:026: In type definition: in the first argument of
combined_ho_type_inst_1.m:026:   higher-order predicate type:
combined_ho_type_inst_1.m:026:   error: the type
combined_ho_type_inst_1.m:026:   [38;5;87m`(pred((int :: in), (int :: out)) is det)'[39;49m
combined_ho_type_inst_1.m:026:   contains higher order inst information, but
combined_ho_type_inst_1.m:026:   this is [38;5;203mnot allowed[39;49m in a predicate's argument.
combined_ho_type_inst_1.m:028: In type definition: in the first argument of
combined_ho_type_inst_1.m:028:   higher-order function type:
combined_ho_type_inst_1.m:028:   error: the type
combined_ho_type_inst_1.m:028:   [38;5;87m`(((func (int :: in)) = (int :: out)) is semidet)'[39;49m
combined_ho_type_inst_1.m:028:   contains higher order inst information, but
combined_ho_type_inst_1.m:028:   this is [38;5;203mnot allowed[39;49m in a function's argument.
combined_ho_type_inst_1.m:031: In type definition: in the first argument of
combined_ho_type_inst_1.m:031:   higher-order function type:
combined_ho_type_inst_1.m:031:   error: the type
combined_ho_type_inst_1.m:031:   [38;5;87m`(((func (int :: in)) = (int :: out)) is semidet)'[39;49m
combined_ho_type_inst_1.m:031:   contains higher order inst information, but
combined_ho_type_inst_1.m:031:   this is [38;5;203mnot allowed[39;49m in a function's argument.
combined_ho_type_inst_1.m:035: Error: [38;5;87m`semiet'[39;49m [38;5;203mis not a valid determinism.[39;49m
combined_ho_type_inst_1.m:036: In `:- func' declaration:
combined_ho_type_inst_1.m:036:   in the first argument:
combined_ho_type_inst_1.m:036:   error: the type
combined_ho_type_inst_1.m:036:   [38;5;87m`(((func (int :: in)) = (int :: out)) is semidet)'[39;49m
combined_ho_type_inst_1.m:036:   contains higher order inst information, but
combined_ho_type_inst_1.m:036:   this is [38;5;203mnot allowed[39;49m in a function's argument.
